# infra-as-code-c

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  sample.yaml  sample_with_cycle.yaml
.github/workflows/: ci.yml
docs/: architecture.md  cli-reference.md  index.md
docs/api/: cost.md  drift.md  graph.md  kubernetes.md  models.md  parser.md  terraform.md  validator.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cost.md  drift.md  kubernetes.md  manifest.md  peers.md  secrets.md  terraform.md  validation.md
infra_gen/: __init__.py  __main__.py  cli.py  cost.py  drift.py  graph.py  kubernetes.py  models.py  parser.py  state.py  terraform.py  validator.py
man/: infra-gen.1
tests/: test_all.py
